--- a/references.bib
+++ b/references.bib
@@ -252,6 +252,34 @@ author = "David B. Kaplan",
   abstract={The ATLAS detector as installed in its experimental cavern at point 1 at CERN is described in this paper. A brief overview of the expected performance of the detector when the Large Hadron Collider begins operation is also presented.}
 }
 
+@article{simulation1,
+      author         = "Aad, G. and others",
+      title          = "{The ATLAS Simulation Infrastructure}",
+      collaboration  = "ATLAS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C 70",
+      year           = "2010",
+      pages          = "823",
+      doi            = "10.1140/epjc/s10052-010-1429-9",
+      eprint         = "1005.4568",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1005.4568;%%"
+}
+
+@article{simulation2,
+      author         = "Agostinelli, S. and others",
+      title          = "{GEANT4: A Simulation toolkit}",
+      collaboration  = "GEANT4",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A 506",
+      year           = "2003",
+      pages          = "250",
+      doi            = "10.1016/S0168-9002(03)01368-8",
+      reportNumber   = "SLAC-PUB-9350, FERMILAB-PUB-03-339",
+      SLACcitation   = "%%CITATION = NUIMA,A506,250;%%"
+}
+
 @article{Sherpa,
       author         = "Gleisberg, T. and Hoeche, Stefan. and Krauss, F. and
                         Schonherr, M. and Schumann, S. and Siegert, F. and Winter,
