--- a/content/chapter4.tex
+++ b/content/chapter4.tex
@@ -53,7 +53,7 @@ The background is illustrated as colour filled histogram with a specific colour 
 The different background processes are stacked, which means that the histograms of the different background processes are added . 
 The signal is shown as solid red and blue line for the BBS and TTS process.
 In the legend the weighted number of events is displayed in brackets next to each process.
-Furthermore the statistical uncertaintys are shown as vertical lines.
+Furthermore the statistical uncertainties are shown as vertical lines.
 The shape of the distribution looks as expected because it displays a pole mass distribution which is smeared because of detector resolution.
 Processes including a real Z boson, like the signal and Z+jets processes, have a peak at the Z mass. 
 The \ttbar{} background process has no peak at the Z pole mass which is as anticipated as well because the leptons result from independent W boson decays.\\
